# git-ps-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  DEVELOPMENT.md  LICENSE  PRODUCT.md  README.md  RELEASE.md  RESOURCES.md  build.rs  flake.nix
.circleci/: config.yml
.git-ps/: config.toml
.git-ps/hooks/: isolate_post_checkout
.github/workflows/: test.yml
doc/: gps-add.1  gps-backup-stack.1  gps.1
example_hooks/: integrate_verify.sample.github-cli  isolate_post_checkout-example  isolate_post_checkout.sample  list_additional_information-github-cli-example  list_additional_information-ticket-number-example  request_review_post_sync-github-cli-example  request_review_post_sync-github-cli-with-reopen-and-assign-to-self-example  request_review_post_sync.sample.github-cli-with-reopen-and-assign-to-self-example  request_review_post_sync.sample.gitlab-cli
src/: cli.rs  lib.rs  main.rs
src/commands/: add_changes_to_stage.rs  amend.rs  amend_patch.rs  append.rs  backup_stack.rs  batch_request_review.rs  branch.rs  checkout.rs  create_patch.rs  fetch.rs  id.rs  integrate.rs  isolate.rs  list.rs  log.rs  ls.rs  mod.rs  patch_index_range.rs  patch_index_range_batch.rs  pull.rs  push.rs  rebase.rs  request_review.rs  request_review_branch.rs  rr.rs  sha.rs  show.rs  status.rs  sync.rs  unstage.rs  upstream_patches.rs  utils.rs
src/commands/plumbing/: branch.rs  mod.rs  sync.rs
src/commands/porcelain/: checkout.rs  integrate.rs  isolate.rs  ls.rs  mod.rs  pull.rs  rebase.rs  rr.rs  show.rs
src/ps/: branch.rs  checkout.rs  git.rs  integrate.rs  isolate.rs  ls.rs  mod.rs  ps.rs  pull.rs  rebase.rs  rr.rs  show.rs  state_management.rs  test.rs  utils.rs
src/ps/commands/: ls.rs  mod.rs  pull.rs  rebase.rs  rr.rs
src/ps/plumbing/: branch.rs  git.rs  mod.rs  sync.rs  test.rs
src/ps/private/: branch.rs  checkout.rs  cherry_picking.rs  commit_is_behind.rs  config.rs  git.rs  hooks.rs  isolate_state_management.rs  list.rs  mod.rs  password_store.rs  patch_status.rs  paths.rs  request_review_branch.rs  signers.rs  state_computation.rs  state_management.rs  string_file_io.rs  utils.rs  verify_isolation.rs
src/ps/private/config/: branch_config_dto.rs  config_dto.rs  fetch_config_dto.rs  get_config.rs  integrate_config_dto.rs  list_config_dto.rs  mod.rs  ps_config.rs  pull_config_dto.rs  read_config.rs  read_config_or_default.rs  request_review_config_dto.rs
src/ps/private/git/: branch_upstream_name.rs  commit_diff.rs  commit_diff_patch_id.rs  common_ancestor.rs  config_get_bool.rs  config_get_string.rs  config_get_to_option.rs  count_commits.rs  create_commit.rs  create_cwd_repo.rs  create_signed_commit.rs  create_unsigned_commit.rs  ext_common_ancestor.rs  ext_delete_remote_branch.rs  ext_fetch.rs  ext_push.rs  get_current_branch.rs  get_current_branch_shorthand.rs  get_revs.rs  get_summary.rs  git_error.rs  hash_object_write.rs  in_rebase.rs  in_rebase_done_todos.rs  in_rebase_head_name.rs  in_rebase_onto.rs  in_rebase_todos.rs  line_to_rebase_todo.rs  read_hash_object.rs  rebase_todo.rs  (+4 more)
src/ps/ps/: mod.rs  pull.rs
src/ps/public/: add_changes_to_stage.rs  amend.rs  amend_patch.rs  append.rs  backup_stack.rs  batch_request_review.rs  branch.rs  checkout.rs  create_patch.rs  fetch.rs  id.rs  integrate.rs  isolate.rs  latest_github_release.rs  list.rs  log.rs  ls.rs  mod.rs  new_integrate.rs  pull.rs  push.rs  rebase.rs  request_review.rs  request_review_branch.rs  rr.rs  sha.rs  show.rs  status.rs  sync.rs  unstage.rs  upstream_patches.rs  verify_isolation.rs
test/: dune  gps.t
(+24 files in other folders)
