[package]
name = "gps"
version = "6.9.0"
edition = "2018"
license-file = "LICENSE"
description = "Official CLI & library for Git Patch Stack"
homepage = "https://git-ps.sh"
documentation = "https://book.git-ps.sh"
repository = "https://github.com/uptech/git-ps-rs"
readme = "README.md"
keywords = ["git", "development", "tools"]
categories = ["command-line-utilities", "library", "development-tools"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
git2 = "0.17.1"
uuid = { version = "1.1", features = ["serde", "v4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.5.6"
lazy_static = "1.4.0"
is_executable = "1.0.1"
homedir = "0.2.1"
toml = "0.8.8"
ansi_term = { version = "0.12.1", features = ["derive_serde_style"] }
ureq = "2.4.0"
version-compare = "0.1.0"
ssh-key = { version = "0.6.1", features = ["alloc", "encryption", "ed25519", "rsa"] }
rpassword = "7.2.0"
clap = { version = "4.4.6", features = ["derive"] }
keyring = "2"

[dev-dependencies]
tempfile = "3.3.0"

[build-dependencies]
clap = { version = "4.4.6", features = ["string"] }
clap_complete = "4.4.3"
clap_mangen = "0.2.14"

[features]
backup_cmd = []
