[package]
name = "gps"
version = "7.2.0"
edition = "2018"
license-file = "LICENSE"
description = "Official CLI & library for Git Patch Stack"
homepage = "https://git-ps.sh"
documentation = "https://book.git-ps.sh"
repository = "https://github.com/uptech/git-ps-rs"
readme = "README.md"
keywords = ["git", "development", "tools"]
categories = ["command-line-utilities", "library", "development-tools"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
git2 = "0.18.2"
uuid = { version = "1.7", features = ["serde", "v4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10.3"
lazy_static = "1.4.0"
is_executable = "1.0.1"
homedir = "0.2.1"
toml = "0.8.10"
ansi_term = { version = "0.12.1", features = ["derive_serde_style"] }
ureq = "2.9.6"
version-compare = "0.1.1"
clap = { version = "4.5.1", features = ["derive"] }
tempfile = "3.10.1"

[build-dependencies]
clap = { version = "4.5.1", features = ["string"] }
clap_complete = "4.5.1"
clap_mangen = "0.2.20"

[features]
backup_cmd = []
